--- a/src/container/Entries/Tasks/addtask.css
+++ b/src/container/Entries/Tasks/addtask.css
@@ -1,10 +1,32 @@
 .addTask-container{
     display: flex;
     flex-direction: column;
-    height: 100vh;
-    overflow: hidden;
+    height: 97vh;
     background-color: yellow;
+    padding: 2% 5%;
 }
-.addTask-main{
-    
+.addTask-head{
+    padding-bottom: 50px;
+}
+.task-input{
+    height: 50px;
+    display: flex;
+}
+.addtask-form{
+    display: flex;
+    flex-direction: column;
+    align-self: center;
+    justify-self: center;
+}
+.close-icon{
+    font-size: 25px;
+}
+.back-button{
+    height: 35px;
+    width: 35px;
+    border-radius: 360px;
+    background: rgba(0,0,0,0.2);
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
