--- a/src/container/Entries/entries.css
+++ b/src/container/Entries/entries.css
@@ -74,12 +74,13 @@
     background: rgba(255,0,0,0.4);
 }
 .taskCard{
-    background-color:skyblue;
+    background-color:rgb(120, 205, 239);
     height: 150px;
     margin:0.5% 20%;
     display: flex;
     flex-direction: column;
     border-radius: 50px;
+    cursor: pointer;
 }
 .taskCard-nav{
     display: flex;
@@ -94,9 +95,10 @@
     font-size: 24px;
     font-weight: 600;
     align-self:baseline;
+    text-transform: capitalize;
 }
 .second{
-    background-color:yellow;
+    background-color:rgb(255, 255, 86)
 }
 .third{
     background-color:rgb(255, 232, 232);
@@ -117,7 +119,15 @@
     .taskCard{
         margin: 1.2% 0;
 
+    }
+    .taskCard-button{
+        height: 30px;
+        width: 30px;
+        font-size: 18px;
     } 
     .weekDays{
         padding: 5% 0%;}
+    .taskCard-main{
+        font-size: 18px;
+    }
 }
