--- a/src/container/Home/home.css
+++ b/src/container/Home/home.css
@@ -8,6 +8,7 @@
     text-align: left;
     color: #5d8bff;
     width: 60%;
+    text-shadow: 1px 1px white; 
     line-height: 1.1;
     overflow: hidden;
 
