added addtask css

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 .App {
   text-align: center;
-  background-color: #101c2e;
+  background-color: #101c2e; 
+  /* background-color: #94B49F; */
 
 }
 .modal{
