--- a/src/container/Entries/entries.css
+++ b/src/container/Entries/entries.css
@@ -23,11 +23,11 @@
     border-bottom: 2px solid #cccccc;
 }
 .tasks .entries-task{
-    color: #1e4199;
+    color: #5d8bff;
     border-bottom: 4px solid #cccccc;
 }
 .boards .entries-boards{
-    color: #1e4199;
+    color: #5d8bff;
     border-bottom: 4px solid #cccccc;
 }
 .b .tasksContainer{
