--- a/src/container/Entries/modal.css
+++ b/src/container/Entries/modal.css
@@ -24,8 +24,9 @@
 .modal-time{
     display: flex;
     flex-direction: column;
-    align-items: baseline;
+    align-items: right;
     gap: 15px;
+    justify-self: right;
 }
 .created{
     display: flex;
@@ -33,7 +34,7 @@
     gap: 15px;
 }
 .modal-subHeadings{
-    font-size: 14px;
+    font-size: 12px;
     color: rgb(52, 52, 52);
 }
 .time-remaining{
@@ -68,7 +69,11 @@
     font-weight: 900;
     font-size: 18px;
 }
-
+.modal-time{
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+}
 @media screen and (max-width:1080px) {
     .modal-title{
         font-size: 54px;
