--- a/src/container/Home/home.css
+++ b/src/container/Home/home.css
@@ -7,8 +7,8 @@
     font-size: 108px;
     text-align: left;
     color: #5d8bff;
+    /* color: #cee5d0; */
     width: 60%;
-    text-shadow: 1px 1px white; 
     line-height: 1.1;
     overflow: hidden;
 
