--- a/src/container/Navbar/navbar.css
+++ b/src/container/Navbar/navbar.css
@@ -14,6 +14,7 @@
     width: 80px;
     border-radius: 360px;
     overflow: hidden;
+    box-shadow: 0px 0px 20px #3a4d68;
 }
 
 .navbar-fun-components{
@@ -37,7 +38,6 @@
 img{
     height: 80px;
     width: 80px;
-
 }
 @media screen and (max-width:1080px) {
     .navbar-user-icon{
